swagger, models, data converter, tasks with project
