# reader-api/handlers/tasks_handler.go
@@ -4,19 +4,9 @@ import (
 	"context"
 	"fmt"
 	"net/http"
-	"time"
 
-	"github.com/google/uuid"
 	"github.com/sieugene/jp-reader/utils"
 )
-
-type Task struct {
-	ID        uuid.UUID `json:"id"`
-	Title     string    `json:"title"`
-	Status    string    `json:"status" enums:"processing,error,completed,waiting"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
-}
 
 // HandlerGetTasks returns a list of tasks
 // @Summary Get list of tasks
@@ -28,10 +18,34 @@ type Task struct {
 // @Failure 400 {string} string "Couldn't get tasks: [error message]"
 // @Router /tasks [get]
 func (apiCfg *ApiConfig) HandlerGetTasks(w http.ResponseWriter, r *http.Request) {
-	projects, err := apiCfg.DB.GetTasks(context.Background())
+	tasks, err := apiCfg.DB.GetTasks(context.Background())
 	if err != nil {
 		utils.RespondWithError(w, 400, fmt.Sprintf("Couldn't get tasks:%v", err))
 		return
 	}
-	utils.RespondWithJSON(w, 200, projects)
+	utils.RespondWithJSON(w, 200, databaseTasksToTasks(tasks))
+}
+
+// HandlerGetTasksWithProjects returns a list of tasks with associated projects
+// @Summary Get list of tasks with projects
+// @Description Retrieves all tasks along with their associated projects from the database.
+// @Tags tasks
+// @Accept json
+// @Produce json
+// @Success 200 {array} TaskWithProject
+// @Failure 400 {string} string "Couldn't get tasks: [error message]"
+// @Router /tasks/projects [get]
+func (apiCfg *ApiConfig) HandlerGetTasksWithProjects(w http.ResponseWriter, r *http.Request) {
+	tasksWithProjectsRaw, err := apiCfg.DB.GetTasksWithProjects(context.Background())
+	if err != nil {
+		utils.RespondWithError(w, 400, fmt.Sprintf("Couldn't get tasks with projects:%v", err))
+		return
+	}
+	tasksWithProjects, err := databaseTasksAndProjectsToTasksAndProjects(tasksWithProjectsRaw)
+	if err != nil {
+		utils.RespondWithError(w, 400, fmt.Sprintf("Couldn't get tasks with projects:%v", err))
+		return
+	}
+
+	utils.RespondWithJSON(w, 200, tasksWithProjects)
 }
